# ortools-integration

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  install.zip.REMOVED.git-id
cmake/: utilsRTE.cmake
scripts/: .gitignore  .gitrepo  README.md  light_test_runner.py  sirius-or-tools-build-windows.sh  sirius-or-tools-configure-windows-prebuilt-libs.sh  test.md  utils.sh
scripts/exempleAPIC/: CMakeLists.txt
scripts/exempleAPIC/src/: main.c
scripts/linux/: 0_FullChainAuto.sh  1_Sirius_config-build-install.sh  2_OR-Tools_config-build-install.sh  3_Antares_config-build.sh  4_OR-Tools_tests.sh  config.sh
scripts/windows/: 0_FullChainAuto.sh  1_Sirius_config-build-install.sh  2_OR-Tools_config-build-install.sh  3_Antares_config-build.sh  4_OR-Tools_tests.sh  config.sh
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  cppTestsUtils.cpp  cppTestsUtils.h
src/cpp/Basic/AlwaysOk/: main.cpp
src/cpp/Cbc/SetObjectiveOffset/: main.cpp
src/cpp/Sirius/MultipleInstances/: main.cpp
src/cpp/Sirius/SetTimeLimit/: main.cpp
src/cpp/Sirius/VariablesStatus/: main.cpp
src/cpp/Xpress/GoogleExample/: main.cpp
src/cpp/Xpress/SetSpecificParams/: main.cpp
src/cpp/Xpress/SimpleLP/: main.cpp
tests/cpp/: CMakeLists.txt
tests/cpp/testAlwaysFail/: main.cpp
tests/cpp/testAlwaysOK/: main.cpp
tests/cpp/testXpress1/: main.cpp
tests/cpp/testXpressMultipleInstances/: main.cpp
tests/cpp/testXpressSetObjectiveOffset/: main.cpp
tests/cpp/testXpressSetTimeLimit/: main.cpp
